--- a/package.json
+++ b/package.json
@@ -35,5 +35,12 @@
     "nodemailer": "~0.7.1",
     "serve-favicon": "~2.4.2",
     "tc-angular-chartjs": "^2.1.3"
+  },
+  "engines":{
+    "node":"6.11.1"
+  },
+  "repository":{
+  	"type":"git",
+  	"url": "https://github.com/skhakhane/makhelwane"
   }
 }
